Add missing content quad element to native scene manager.

BUG=712343

Review-Url: https://codereview.chromium.org/2826553002
Cr-Commit-Position: refs/heads/master@{#465273}

Former-commit-id: c434f0529beddf34dd85c99faf9e142ea094ce75